@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,13 +22,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.converter;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 /**
  * Generic converter, thanks to Java8 features not only provides a way of generic bidirectional
@@ -36,21 +37,11 @@ import java.util.stream.Collectors;
  * @param <T> DTO representation's type
  * @param <U> Domain representation's type
  */
+@RequiredArgsConstructor
 public class Converter<T, U> {
 
   private final Function<T, U> fromDto;
   private final Function<U, T> fromEntity;
-
-  /**
-   * Constructor.
-   *
-   * @param fromDto    Function that converts given dto entity into the domain entity.
-   * @param fromEntity Function that converts given domain entity into the dto entity.
-   */
-  public Converter(final Function<T, U> fromDto, final Function<U, T> fromEntity) {
-    this.fromDto = fromDto;
-    this.fromEntity = fromEntity;
-  }
 
   /**
    * Converts DTO to Entity.
@@ -82,7 +73,7 @@ public class Converter<T, U> {
    *     with the conversion function
    */
   public final List<U> createFromDtos(final Collection<T> dtos) {
-    return dtos.stream().map(this::convertFromDto).collect(Collectors.toList());
+    return dtos.stream().map(this::convertFromDto).toList();
   }
 
   /**
@@ -93,7 +84,7 @@ public class Converter<T, U> {
    *     with the conversion function
    */
   public final List<T> createFromEntities(final Collection<U> entities) {
-    return entities.stream().map(this::convertFromEntity).collect(Collectors.toList());
+    return entities.stream().map(this::convertFromEntity).toList();
   }
 
 }
