@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,30 +22,27 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.filterer.threat;
 
-import com.google.common.collect.ImmutableList;
 import com.iluwatar.filterer.domain.Filterer;
-
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import lombok.EqualsAndHashCode;
+import lombok.RequiredArgsConstructor;
+import lombok.ToString;
 
 /**
  * {@inheritDoc}
  */
+@ToString
+@EqualsAndHashCode
+@RequiredArgsConstructor
 public class SimpleThreatAwareSystem implements ThreatAwareSystem {
 
   private final String systemId;
-  private final ImmutableList<Threat> issues;
-
-  public SimpleThreatAwareSystem(final String systemId, final List<Threat> issues) {
-    this.systemId = systemId;
-    this.issues = ImmutableList.copyOf(issues);
-  }
+  private final List<Threat> issues;
 
   /**
    * {@inheritDoc}
@@ -75,33 +74,7 @@ public class SimpleThreatAwareSystem implements ThreatAwareSystem {
 
   private List<Threat> filteredItems(Predicate<? super Threat> predicate) {
     return this.issues.stream()
-            .filter(predicate)
-            .collect(Collectors.toList());
+            .filter(predicate).toList();
   }
 
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    var that = (SimpleThreatAwareSystem) o;
-    return systemId.equals(that.systemId)
-            && issues.equals(that.issues);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(systemId, issues);
-  }
-
-  @Override
-  public String toString() {
-    return "SimpleThreatAwareSystem{"
-            + "systemId='" + systemId
-            + '\'' + ", issues=" + issues
-            + '}';
-  }
 }
