@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,40 +22,64 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.layers.service;
 
-import com.iluwatar.layers.dto.CakeInfo;
-import com.iluwatar.layers.dto.CakeLayerInfo;
-import com.iluwatar.layers.dto.CakeToppingInfo;
-import com.iluwatar.layers.exception.CakeBakingException;
-import com.iluwatar.layers.service.CakeBakingServiceImpl;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.iluwatar.layers.app.LayersApp;
+import dto.CakeInfo;
+import dto.CakeLayerInfo;
+import dto.CakeToppingInfo;
+import exception.CakeBakingException;
+import org.junit.jupiter.api.BeforeEach;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import service.CakeBakingServiceImpl;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Test;
+
 
 /**
  * Date: 12/15/15 - 9:55 PM
  *
  * @author Jeroen Meulemeester
  */
-public class CakeBakingServiceImplTest {
+
+@SpringBootTest(classes = LayersApp.class)
+class CakeBakingServiceImplTest {
+
+  private final CakeBakingServiceImpl cakeBakingService;
+
+  @Autowired
+  CakeBakingServiceImplTest(CakeBakingServiceImpl cakeBakingService) {
+    this.cakeBakingService = cakeBakingService;
+  }
+
+  @BeforeEach
+    void setUp() {
+        cakeBakingService.deleteAllCakes();
+        cakeBakingService.deleteAllLayers();
+        cakeBakingService.deleteAllToppings();
+    }
+
 
   @Test
-  public void testLayers() {
-    final var service = new CakeBakingServiceImpl();
 
-    final var initialLayers = service.getAvailableLayers();
+  void testLayers() {
+    final var initialLayers = cakeBakingService.getAvailableLayers();
     assertNotNull(initialLayers);
     assertTrue(initialLayers.isEmpty());
 
-    service.saveNewLayer(new CakeLayerInfo("Layer1", 1000));
-    service.saveNewLayer(new CakeLayerInfo("Layer2", 2000));
+    cakeBakingService.saveNewLayer(new CakeLayerInfo("Layer1", 1000));
+    cakeBakingService.saveNewLayer(new CakeLayerInfo("Layer2", 2000));
 
-    final var availableLayers = service.getAvailableLayers();
+    final var availableLayers = cakeBakingService.getAvailableLayers();
     assertNotNull(availableLayers);
     assertEquals(2, availableLayers.size());
     for (final var layer : availableLayers) {
@@ -66,17 +92,15 @@ public class CakeBakingServiceImplTest {
   }
 
   @Test
-  public void testToppings() {
-    final var service = new CakeBakingServiceImpl();
-
-    final var initialToppings = service.getAvailableToppings();
+  void testToppings() {
+    final var initialToppings = cakeBakingService.getAvailableToppings();
     assertNotNull(initialToppings);
     assertTrue(initialToppings.isEmpty());
 
-    service.saveNewTopping(new CakeToppingInfo("Topping1", 1000));
-    service.saveNewTopping(new CakeToppingInfo("Topping2", 2000));
+    cakeBakingService.saveNewTopping(new CakeToppingInfo("Topping1", 1000));
+    cakeBakingService.saveNewTopping(new CakeToppingInfo("Topping2", 2000));
 
-    final var availableToppings = service.getAvailableToppings();
+    final var availableToppings = cakeBakingService.getAvailableToppings();
     assertNotNull(availableToppings);
     assertEquals(2, availableToppings.size());
     for (final var topping : availableToppings) {
@@ -89,29 +113,28 @@ public class CakeBakingServiceImplTest {
   }
 
   @Test
-  public void testBakeCakes() throws CakeBakingException {
-    final var service = new CakeBakingServiceImpl();
+  void testBakeCakes() throws CakeBakingException {
 
-    final var initialCakes = service.getAllCakes();
+    final var initialCakes = cakeBakingService.getAllCakes();
     assertNotNull(initialCakes);
     assertTrue(initialCakes.isEmpty());
 
     final var topping1 = new CakeToppingInfo("Topping1", 1000);
     final var topping2 = new CakeToppingInfo("Topping2", 2000);
-    service.saveNewTopping(topping1);
-    service.saveNewTopping(topping2);
+    cakeBakingService.saveNewTopping(topping1);
+    cakeBakingService.saveNewTopping(topping2);
 
     final var layer1 = new CakeLayerInfo("Layer1", 1000);
     final var layer2 = new CakeLayerInfo("Layer2", 2000);
     final var layer3 = new CakeLayerInfo("Layer3", 2000);
-    service.saveNewLayer(layer1);
-    service.saveNewLayer(layer2);
-    service.saveNewLayer(layer3);
+    cakeBakingService.saveNewLayer(layer1);
+    cakeBakingService.saveNewLayer(layer2);
+    cakeBakingService.saveNewLayer(layer3);
 
-    service.bakeNewCake(new CakeInfo(topping1, List.of(layer1, layer2)));
-    service.bakeNewCake(new CakeInfo(topping2, Collections.singletonList(layer3)));
+    cakeBakingService.bakeNewCake(new CakeInfo(topping1, List.of(layer1, layer2)));
+    cakeBakingService.bakeNewCake(new CakeInfo(topping2, Collections.singletonList(layer3)));
 
-    final var allCakes = service.getAllCakes();
+    final var allCakes = cakeBakingService.getAllCakes();
     assertNotNull(allCakes);
     assertEquals(2, allCakes.size());
     for (final var cakeInfo : allCakes) {
@@ -126,62 +149,50 @@ public class CakeBakingServiceImplTest {
   }
 
   @Test
-  public void testBakeCakeMissingTopping() {
-    final var service = new CakeBakingServiceImpl();
-
+  void testBakeCakeMissingTopping() {
     final var layer1 = new CakeLayerInfo("Layer1", 1000);
     final var layer2 = new CakeLayerInfo("Layer2", 2000);
-    service.saveNewLayer(layer1);
-    service.saveNewLayer(layer2);
+    cakeBakingService.saveNewLayer(layer1);
+    cakeBakingService.saveNewLayer(layer2);
 
     final var missingTopping = new CakeToppingInfo("Topping1", 1000);
-    assertThrows(CakeBakingException.class, () -> {
-      service.bakeNewCake(new CakeInfo(missingTopping, List.of(layer1, layer2)));
-    });
+    assertThrows(CakeBakingException.class, () -> cakeBakingService.bakeNewCake(new CakeInfo(missingTopping, List.of(layer1, layer2))));
   }
 
   @Test
-  public void testBakeCakeMissingLayer() {
-    final var service = new CakeBakingServiceImpl();
-
-    final var initialCakes = service.getAllCakes();
+  void testBakeCakeMissingLayer() {
+    final var initialCakes = cakeBakingService.getAllCakes();
     assertNotNull(initialCakes);
     assertTrue(initialCakes.isEmpty());
 
     final var topping1 = new CakeToppingInfo("Topping1", 1000);
-    service.saveNewTopping(topping1);
+    cakeBakingService.saveNewTopping(topping1);
 
     final var layer1 = new CakeLayerInfo("Layer1", 1000);
-    service.saveNewLayer(layer1);
+    cakeBakingService.saveNewLayer(layer1);
 
     final var missingLayer = new CakeLayerInfo("Layer2", 2000);
-    assertThrows(CakeBakingException.class, () -> {
-      service.bakeNewCake(new CakeInfo(topping1, List.of(layer1, missingLayer)));
-    });
+    assertThrows(CakeBakingException.class, () -> cakeBakingService.bakeNewCake(new CakeInfo(topping1, List.of(layer1, missingLayer))));
   }
 
   @Test
-  public void testBakeCakesUsedLayer() throws CakeBakingException {
-    final var service = new CakeBakingServiceImpl();
-
-    final var initialCakes = service.getAllCakes();
+  void testBakeCakesUsedLayer() throws CakeBakingException {
+    final var initialCakes = cakeBakingService.getAllCakes();
     assertNotNull(initialCakes);
     assertTrue(initialCakes.isEmpty());
 
     final var topping1 = new CakeToppingInfo("Topping1", 1000);
     final var topping2 = new CakeToppingInfo("Topping2", 2000);
-    service.saveNewTopping(topping1);
-    service.saveNewTopping(topping2);
+    cakeBakingService.saveNewTopping(topping1);
+    cakeBakingService.saveNewTopping(topping2);
 
     final var layer1 = new CakeLayerInfo("Layer1", 1000);
     final var layer2 = new CakeLayerInfo("Layer2", 2000);
-    service.saveNewLayer(layer1);
-    service.saveNewLayer(layer2);
+    cakeBakingService.saveNewLayer(layer1);
+    cakeBakingService.saveNewLayer(layer2);
 
-    service.bakeNewCake(new CakeInfo(topping1, List.of(layer1, layer2)));
-    assertThrows(CakeBakingException.class, () -> {
-      service.bakeNewCake(new CakeInfo(topping2, Collections.singletonList(layer2)));
-    });
+    cakeBakingService.bakeNewCake(new CakeInfo(topping1, List.of(layer1, layer2)));
+    assertThrows(CakeBakingException.class, () -> cakeBakingService.bakeNewCake(new CakeInfo(topping2, Collections.singletonList(layer2))));
   }
 
 }
