@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,17 +22,13 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.leaderelection.ring;
 
 import com.iluwatar.leaderelection.AbstractInstance;
 import com.iluwatar.leaderelection.Message;
 import com.iluwatar.leaderelection.MessageManager;
 import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * Implementation with token ring algorithm. The instances in the system are organized as a ring.
@@ -43,9 +41,8 @@ import org.slf4j.LoggerFactory;
  * smallest ID to be the new leader, and then send a leader message to other instances to inform the
  * result.
  */
+@Slf4j
 public class RingInstance extends AbstractInstance {
-
-  private static final Logger LOGGER = LoggerFactory.getLogger(RingInstance.class);
   private static final String INSTANCE = "Instance ";
 
   /**
@@ -90,7 +87,7 @@ public class RingInstance extends AbstractInstance {
     var candidateList = Arrays.stream(content.trim().split(","))
         .map(Integer::valueOf)
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
     if (candidateList.contains(localId)) {
       var newLeaderId = candidateList.get(0);
       LOGGER.info(INSTANCE + localId + " - New leader should be " + newLeaderId + ".");
